fix: align buttons, add colors, add fonts

--- a/main.css
+++ b/main.css
@@ -1,15 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@300&family=Source+Sans+Pro&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body{
+    font-family: Inter, Haettenschweiler, 'Arial', sans-serif;
+    font-size: 2rem;
+    
+}
+
 .calc-body{
     border: solid black;
-    width: 700px;
+    width: 425px;
+    height: 675px;
     background-color: black;
     color: white;
     margin: 0 auto;
+    border-radius: 30px;
 }
 
 header h1{
@@ -18,11 +28,43 @@ header h1{
 }
 
 .screen{
-    height: 20px;
+    height: 20%;
 }
 
 .numpad{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4,auto);
+    grid-template-rows: repeat(4,auto);
+    gap: 15px;
+    justify-content: space-around;
+    margin: 15px
+    
+}
+
+.button{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid; */
+    border-radius: 50%;
+    height: 90px;
+    width: 90px;
+}
+
+.zero{
+    grid-column: 1/ span 2;
+}
+
+.light-grey{
+    background-color: #A5A5A5;
+    color: black;
+    
+}
+.dark-grey{
+    background-color: #333333;
+    ;
+}
+.orange{
+    background-color: #FE9F06;
 }
